--- a/index.html
+++ b/index.html
@@ -353,6 +353,77 @@
         // console.log(a === b); // mahanun number === object match nahi hote mahanun => false yenar
 
         //61
+        // let name;
+        // nmae = {}; // ya thikani name cha spelling galt zala mahanun error yeil.
+        // console.log(nmae); // ans => {} yeil karan.
+        // console.log(name); // ans => undefined yeil karan name cha variable declare kele nahi mahanun undefined yeil.
+
+        //62
+        //  function fruit(){
+        //     console.log("Woof");
+        //  }
+        //  fruit.name = "apple"; // he statement fruit la harm karat nahi mahanun Woof he answer yeil.
+        //  fruit();
+
+        //63
+        // function sum(a, b){
+        //     return a + b;
+        // }
+        // console.warn(sum(1, "2")) // jeva number la string add karayacha asel tar string madhe convert karto. mahanun 12 yeil.Dhoghana pan to as a string ase count karel.
+
+        //64
+        // let number = 0;
+        // console.log(number++); // karan ya thikani 0 + 1 = 1 honar
+        // console.log(++number); // ya thikani 1 + 1 = 2 honar
+        // console.log(number); // ya thikani 2 print honar
+
+        //65
+        // function getAge(...args){ // javascript mahd array ha kadihe datatype nasto to ek object asto. ya thikani spread operator use kele aahe.
+        //     console.log(typeof args);
+        // }
+        // getAge(21);
+
+        //66
+        // function getAge(){
+        //     'use strict' // use strict use kelya mule age chaya agodar let const he use karave lagte. ya thikani use kela nahi mahanun error yeil.
+        //     age = 21;
+        //     console.log(age); //
+        // }
+        // getAge();
+
+        //************************
+
+        // function getAge(){
+        //     age = 21;   // use strct mode naslyamule answer 21 yeil 
+        //     console.log(age); //
+        // }
+        // getAge();
+
+        // 67
+        // what will be the output
+        // const sum = eval('100*10+5'); // eval he string madhil number la mathematical expression madhe convert karte.
+        // console.warn(sum); // answer => 105 yeil
+
+        //68
+        // browser chaya storage mahe sessiion storage asto to keva paryant thamble.
+        // ans => jo paryant browser cha tab open aahe to prayant to prayant session chalu rahato nantar to band hoto. kiwa to mannualy apan band karto teva suddha to band karu skahto.
+
+        //69
+        // const obj = {1: "a", 2: "b", 3: "c"}
+
+        // console.log(obj.hasOwnProperty("1")) // object chaya key la apan number pan deu shakto. ani ("1") ase string ne suddha kiwa (1) ase as a number ase pan check karu shakto.
+        // console.log(obj.hasOwnProperty(1))
+
+        //70
+        // const obj = {a: "one", b:"two", a: "repeat"}
+        // console.log(obj); // ans = {a: "repeat", b: "two"}
+
+        
+
+        
+
+
+
 
 
     </script>
