--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
     // console.log(typeof (3 + 4 + +'5')); // first bracket madhil code run hoeel jar double ++ dile eka string chaya agodar tar te string number madhe convert hoeel mahanun bracket madhil calculation he 12 yeil. ani tyacha typeof ha number yeiil.
 
     //90
-    // console.log([] == []) // ans => false yeil karan ya thikani array madhil memory location compare hoeel. mahanun donhi array madhil memory location same nahi mahanun false yeil.
+    console.log([] == []) // ans => false yeil karan ya thikani array madhil memory location compare hoeel. mahanun donhi array madhil memory location same nahi mahanun false yeil.
     
 
 
